# ircAutomat

./: .gitignore  CMakeLists.txt
include/ircAutomat/: plugin.h
src/: CMakeLists.txt  info.h.in  ircAutomat.cpp
src/pluginManager/: pluginManager.cpp  pluginManager.hpp
src/plugins/: CMakeLists.txt  testplugin.cpp
test/: CMakeLists.txt
